# egypt-survey-ml

./: .gitignore  README.md  pyproject.toml
ERF_Data/: README.md
ERF_Data/Data_Cleaning/: 00_EDA_explore_lfs2022.ipynb  01_preprocess_lfs2022_individual.ipynb
ERF_Data/Data_Cleaning/crosswalk/: build_command_area_governorate_crosswalk.py  build_reg_governorate_mapping.py
notebooks/: Untitled1.ipynb  get_demographic_info.ipynb  get_field_sizes.ipynb  get_food_production.ipynb  get_other_info.ipynb  get_water_use.ipynb
