[project]
name = "egypt-survey-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "exactextract>=0.3.0",
    "food-security",
    "geopandas>=1.1.4",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "rasterstats>=0.21.0",
]

[tool.uv.sources]
food-security = { git = "https://github.com/Deltares-research/Food-Security.git", branch = "main" }
